--- a/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -993,7 +993,7 @@
 	};
 };
 
-&pmi8994_fg {
+&qpnp_fg {
 	qcom,battery-data = <&tone_batterydata>;
 	qcom,hot-bat-decidegc = <550>;
 	qcom,warm-bat-decidegc = <450>;
@@ -1014,7 +1014,7 @@
 	somc,resume-soc-raw-not-full-aging = <0xEF>;
 };
 
-&pmi8994_charger {
+&qpnp_smbcharger {
 	/delete-property/ qcom,parallel-usb-min-current-ma;
 	/delete-property/ qcom,parallel-usb-9v-min-current-ma;
 	/delete-property/ qcom,charging-disabled;
