--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -2657,8 +2657,8 @@
 				"iface_clk", "bus_clk";
 		clocks = <&clock_rpmcc QCRYPTO_CE1_CLK>,
 			 <&clock_rpmcc QCRYPTO_CE1_CLK>,
-			 <&clock_gcc GCC_CE1_AHB_M_CLK>,
-			 <&clock_gcc GCC_CE1_AXI_M_CLK>;
+			 <&clock_rpmcc QCRYPTO_CE1_CLK>,
+			 <&clock_rpmcc QCRYPTO_CE1_CLK>;
 		qcom,ce-opp-freq = <171430000>;
 		qcom,use-sw-aes-cbc-ecb-ctr-algo;
 		qcom,use-sw-aes-xts-algo;
@@ -2689,8 +2689,9 @@
 				"iface_clk", "bus_clk";
 		clocks = <&clock_rpmcc QCEDEV_CE1_CLK>,
 			 <&clock_rpmcc QCEDEV_CE1_CLK>,
-			 <&clock_gcc GCC_CE1_AHB_M_CLK>,
-			 <&clock_gcc GCC_CE1_AXI_M_CLK>;
+			 <&clock_rpmcc QCEDEV_CE1_CLK>,
+			 <&clock_rpmcc QCEDEV_CE1_CLK>;
+		qcom,support-core-clk-only;
 		qcom,ce-opp-freq = <171430000>;
 	};
 
@@ -2717,8 +2718,8 @@
 				"iface_clk", "bus_clk";
 		clocks = <&clock_rpmcc RPM_CE1_CLK>,
 			 <&clock_rpmcc QSEECOM_CE1_CLK>,
-			 <&clock_gcc GCC_CE1_AHB_M_CLK>,
-			 <&clock_gcc GCC_CE1_AXI_M_CLK>;
+			 <&clock_rpmcc QSEECOM_CE1_CLK>,
+			 <&clock_rpmcc QSEECOM_CE1_CLK>;
 		qcom,ce-opp-freq = <171430000>;
 		qcom,qsee-reentrancy-support = <2>;
 	};
@@ -4015,8 +4016,8 @@
 			"iface_clk", "bus_clk";
 		clocks = <&clock_rpmcc RPM_CE1_CLK>,
 			<&clock_rpmcc QSEECOM_CE1_CLK>,
-			<&clock_gcc GCC_CE1_AHB_M_CLK>,
-			<&clock_gcc GCC_CE1_AXI_M_CLK>;
+			<&clock_rpmcc QSEECOM_CE1_CLK>,
+			<&clock_rpmcc QSEECOM_CE1_CLK>;
 			qcom,ce-opp-freq = <171430000>;
 	};
 
