--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -874,7 +874,7 @@
 			< 1593600000 18 >;
 		clock-names = "xo_ao", "aux_clk";
 		clocks = <&clock_rpmcc RPM_XO_A_CLK_SRC>,
-			 <&clock_gcc GPLL0_EARLY>;
+			 <&clock_gcc GPLL0_AO>;
 		#clock-cells = <1>;
 	};
 
@@ -897,7 +897,7 @@
 			< 1036800000 10 >;
 		clock-names = "xo_ao", "aux_clk";
 		clocks = <&clock_rpmcc RPM_XO_A_CLK_SRC>,
-			 <&clock_gcc GPLL0_EARLY>;
+			 <&clock_gcc GPLL0_AO>;
 		#clock-cells = <1>;
 	};
 
