--- a/arch/arm64/boot/dts/qcom/msm8996.dtsi
+++ b/arch/arm64/boot/dts/qcom/msm8996.dtsi
@@ -3215,6 +3215,13 @@
 		asoc-codec-names = "msm-stub-codec.1";
 	};
 
+	qcom,msm-audio-apr {
+		compatible = "qcom,msm-audio-apr";
+		msm_audio_apr_dummy {
+			compatible = "qcom,msm-audio-apr-dummy";
+		};
+	};
+
 	qcom,msm-adsp-loader {
 		status = "ok";
 		compatible = "qcom,adsp-loader";
