--- a/arch/arm64/configs/tone_kagura_defconfig
+++ b/arch/arm64/configs/tone_kagura_defconfig
@@ -441,11 +441,11 @@ CONFIG_OV8825=y
 CONFIG_OV8865=y
 CONFIG_s5k4e1=y
 CONFIG_OV12830=y
-CONFIG_SONY_CAM_V4L2=y
 CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 CONFIG_MSMB_JPEG=y
 CONFIG_MSM_FD=y
 CONFIG_MSM_JPEGDMA=y
+CONFIG_SONY_CAM_V4L2=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_VMEM=y
 CONFIG_MSM_VIDC_GOVERNORS=y
@@ -570,7 +570,6 @@ CONFIG_SEEMP_CORE=y
 CONFIG_USB_BAM=y
 CONFIG_MSM_MDSS_PLL=y
 CONFIG_REMOTE_SPINLOCK_MSM=y
-CONFIG_MSM_TIMER_LEAP=y
 CONFIG_IOMMU_IO_PGTABLE_FAST=y
 CONFIG_ARM_SMMU=y
 CONFIG_MSM_SMEM=y
@@ -579,44 +578,31 @@ CONFIG_MSM_GLINK=y
 CONFIG_MSM_GLINK_LOOPBACK_SERVER=y
 CONFIG_MSM_GLINK_SMD_XPRT=y
 CONFIG_MSM_GLINK_SMEM_NATIVE_XPRT=y
-CONFIG_MSM_SMEM_LOGGING=y
 CONFIG_MSM_SMP2P=y
-CONFIG_MSM_SMP2P_TEST=y
 CONFIG_MSM_QMI_INTERFACE=y
 CONFIG_MSM_RPM_SMD=y
 CONFIG_QCOM_BUS_SCALING=y
-CONFIG_QCOM_SMEM=y
-CONFIG_QCOM_DCC=y
-CONFIG_MSM_IPC_ROUTER_SMD_XPRT=y
 CONFIG_MSM_SYSMON_GLINK_COMM=y
 CONFIG_MSM_IPC_ROUTER_GLINK_XPRT=y
 CONFIG_MSM_GLINK_PKT=y
-CONFIG_QCOM_SMD=y
-CONFIG_QCOM_SMD_RPM=y
 CONFIG_MSM_SPM=y
+CONFIG_MSM_L2_SPM=y
 CONFIG_QCOM_SCM=y
+CONFIG_QCOM_SCM_XPU=y
 CONFIG_QCOM_WATCHDOG_V2=y
-CONFIG_QCOM_IRQ_HELPER=y
 CONFIG_QCOM_MEMORY_DUMP_V2=y
 CONFIG_MSM_RUN_QUEUE_STATS=y
-CONFIG_MSM_BOOT_STATS=y
 CONFIG_MSM_ADSP_LOADER=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_MSM_SUBSYSTEM_RESTART=y
 CONFIG_MSM_PIL=y
 CONFIG_MSM_PIL_SSR_GENERIC=y
 CONFIG_MSM_PIL_MSS_QDSP6V5=y
-CONFIG_TRACER_PKT=y
-CONFIG_QCOM_FORCE_WDOG_BITE_ON_PANIC=y
 CONFIG_MSM_MPM_OF=y
 CONFIG_MSM_EVENT_TIMER=y
 CONFIG_MSM_AVTIMER=y
 CONFIG_MSM_KERNEL_PROTECT=y
-CONFIG_QCOM_REMOTEQDSS=y
-CONFIG_MSM_RPM_RBCPR_STATS_V2_LOG=y
-CONFIG_MSM_RPM_LOG=y
 CONFIG_MSM_RPM_STATS_LOG=y
-CONFIG_QSEE_IPC_IRQ_BRIDGE=y
 CONFIG_QCOM_SMCINVOKE=y
 CONFIG_QCOM_EARLY_RANDOM=y
 CONFIG_MEM_SHARE_QMI_SERVICE=y
@@ -629,8 +615,6 @@ CONFIG_DEVFREQ_GOV_QCOM_CACHE_HWMON=y
 CONFIG_DEVFREQ_GOV_MEMLAT=y
 CONFIG_DEVFREQ_SIMPLE_DEV=y
 CONFIG_QCOM_DEVFREQ_DEVBW=y
-CONFIG_SPDM_SCM=y
-CONFIG_DEVFREQ_SPDM=y
 CONFIG_EXTCON=y
 CONFIG_PWM=y
 CONFIG_PWM_QPNP=y
