--- a/arch/arm64/configs/tone_kagura_defconfig
+++ b/arch/arm64/configs/tone_kagura_defconfig
@@ -32,7 +32,7 @@ CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_BZIP2 is not set
 # CONFIG_RD_LZMA is not set
-# CONFIG_RD_XZ is not set
+CONFIG_RD_XZ=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
 # CONFIG_MEMBARRIER is not set
