--- a/arch/arm/boot/dts/qcom/msm8996-tone-common.dtsi
+++ b/arch/arm/boot/dts/qcom/msm8996-tone-common.dtsi
@@ -190,6 +190,8 @@
 		pinctrl-0 = <&msm_gpio_6 &msm_gpio_7>;
 		pinctrl-1 = <&msm_gpio_6 &msm_gpio_7>;
 		status = "okay";
+
+		/delete-node/ nq@28;
 	};
 
 	/* I2C : BLSP11 */
